force-app/main/default/objects/Student__c/fields/Currently_Borrowed_Books__c.field-meta.xml
<CustomField>
    <fullName>Currently_Borrowed_Books__c</fullName>
    <label>Currently Borrowed Books</label>
    <summaryFilterItems>
        <field>Transaction__c.Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Issued</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>