force-app/main/default/objects/Student__c/fields/Overdue_Books_Count__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Books_Count__c</fullName>
    <label>Overdue Books Count</label>
    <summaryFilterItems>
        <field>Transaction__c.Transaction_Status__c</field>
        <operation>equals</operation>
        <value>Overdue</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>