force-app/main/default/objects/Student__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>4th</fullName>
            </value>
            <value>
                <fullName>5th</fullName>
            </value>
            <value>
                <fullName>6th</fullName>
            </value>
            <value>
                <fullName>7th</fullName>
            </value>
            <value>
                <fullName>8th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>