force-app/main/default/objects/Student__c/fields/Total_Borrowed_Books__c.field-meta.xml
<CustomField>
    <fullName>Total_Borrowed_Books__c</fullName>
    <label>Total Borrowed Books</label>
    <summaryForeignKey>Transaction__c.Student__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>